fix(cover): letter and word spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   font-weight: 400;
   /* praktikum +- ok: -0.15px  */
   /* me +- ok: 0.1px */
-  letter-spacing: 0.1px;
+  letter-spacing: -0.15px;
 }
 
 .header {
@@ -100,7 +100,7 @@
   gap: 20px;
   font-size: 100px;
   font-weight: 700;
-  letter-spacing: 60px;
+  letter-spacing: 30px;
   text-transform: uppercase;
 }
 
@@ -121,7 +121,7 @@
 
 .cover__description-text {
   /* before: 2cap, safari not support cap value */
-  word-spacing: 1em;
+  word-spacing: 0.5em;
 }
 
 .aligned-text_center {
@@ -130,6 +130,10 @@
 
 .aligned-text_right {
   text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
 }
 
 .no-letter-spacing {
